tests/ui/structs/struct-variant-privacy-xc.stderr
error[E0603]: enum `Bar` is private
  --> $DIR/struct-variant-privacy-xc.rs:4:33
   |
LL | fn f(b: struct_variant_privacy::Bar) {
   |                                 ^^^ private enum
   |
note: the enum `Bar` is defined here
  --> $DIR/auxiliary/struct_variant_privacy.rs:1:1
   |
LL | enum Bar {
   | ^^^^^^^^

error[E0603]: enum `Bar` is private
  --> $DIR/struct-variant-privacy-xc.rs:7:33
   |
LL |         struct_variant_privacy::Bar::Baz { a: _a } => {}
   |                                 ^^^  --- variant `Baz` is not publicly re-exported
   |                                 |
   |                                 private enum
   |
note: the enum `Bar` is defined here
  --> $DIR/auxiliary/struct_variant_privacy.rs:1:1
   |
LL | enum Bar {
   | ^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
